--- a/CSS/Kasper.css
+++ b/CSS/Kasper.css
@@ -52,6 +52,7 @@ h3 {
   text-align: center;
 }
 .main-heading h2 {
+  text-transform: uppercase;
   font-weight: normal;
   font-size: 40px;
   position: relative;
@@ -469,17 +470,15 @@ header nav .search i {
     flex-basis: 25%;
   }
 }
-@media (hover: hover) {
-  .portfolio .imgs .box:hover .caption {
-    bottom: 0;
-  }
-  .portfolio .imgs .box:hover img {
-    transform: scale(1.3) rotate(-10deg);
-    -webkit-transform: scale(1.3) rotate(-10deg);
-    -moz-transform: scale(1.3) rotate(-10deg);
-    -ms-transform: scale(1.3) rotate(-10deg);
-    -o-transform: scale(1.3) rotate(-10deg);
-  }
+.portfolio .imgs .box:hover .caption {
+  bottom: 0;
+}
+.portfolio .imgs .box:hover img {
+  transform: scale(1.3) rotate(-10deg);
+  -webkit-transform: scale(1.3) rotate(-10deg);
+  -moz-transform: scale(1.3) rotate(-10deg);
+  -ms-transform: scale(1.3) rotate(-10deg);
+  -o-transform: scale(1.3) rotate(-10deg);
 }
 .portfolio .imgs img {
   max-width: 100%;
@@ -521,10 +520,8 @@ header nav .search i {
   -ms-transition: background-color 0.4s;
   -o-transition: background-color 0.4s;
 }
-@media (hover: hover) {
-  .more:hover {
-    background-color: #0d99c0;
-  }
+.more:hover {
+  background-color: #0d99c0;
 }
 
 .video {
@@ -922,11 +919,9 @@ header nav .search i {
   -ms-transition: 0.3s;
   -o-transition: 0.3s;
 }
-@media (hover: hover) {
-  .pricing .plans .plan a:hover {
-    background-color: var(--main-color);
-    color: white;
-  }
+.pricing .plans .plan a:hover {
+  background-color: var(--main-color);
+  color: white;
 }
 .pricing .contact {
   text-align: center;
@@ -947,10 +942,8 @@ header nav .search i {
   -ms-transition: 0.3s;
   -o-transition: 0.3s;
 }
-@media (hover: hover) {
-  .pricing .contact-link:hover {
-    background-color: #0d99c0;
-  }
+.pricing .contact-link:hover {
+  background-color: #0d99c0;
 }
 
 .subscribe {
@@ -1022,10 +1015,8 @@ header nav .search i {
 .subscribe form input[type="submit"]:focus {
   outline: none;
 }
-@media (hover: hover) {
-  .subscribe .container form input[type="submit"]:hover {
-    background-color: #0d99c0;
-  }
+.subscribe .container form input[type="submit"]:hover {
+  background-color: #0d99c0;
 }
 .subscribe form ::placeholder {
   color: white;
@@ -1086,10 +1077,8 @@ header nav .search i {
   -o-transition: 0.3s;
   text-transform: uppercase;
 }
-@media (hover: hover) {
-  .contact .content .send form input[type="submit"]:hover {
-    background-color: #0d99c0;
-  }
+.contact .content .send form input[type="submit"]:hover {
+  background-color: #0d99c0;
 }
 .contact .content .info {
   flex-basis: 25%;
